# disco-mimo

./: .gitignore  .pre-commit-config.yaml  main.py  plots.py  pyproject.toml  pyrightconfig.sionna.json
src/mimo/: cdl.py  data.py  losses.py  main.py  models.py  sampling.py  train.py
