[project]
name = "mimo"
version = "0.1.0"
description = "Diffusion and score-based MIMO channel estimation"
readme = "README.md"
requires-python = "~=3.12.0"

dependencies = []

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
]

torch = [
    "diffusers[torch]==0.36.0",
    "numpy==2.4.2",
    "torch==2.10.0",
]

sionna = [
    "sionna-no-rt==1.2.1",
    "tqdm==4.67.3",
]

[tool.uv]
conflicts = [
    [
      { group = "torch" },
      { group = "sionna" },
    ],
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.ruff]
line-length = 96

[build-system]
requires = ["uv_build>=0.9.28,<0.10.0"]
build-backend = "uv_build"
