[project]
name = "mimo"
version = "0.1.0"
description = "Diffusion and score-based MIMO channel estimation"
readme = "README.md"
requires-python = "~=3.12.0"

dependencies = [
    "matplotlib==3.10.8",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
]

torch = [
    "diffusers[torch]==0.36.0",
    "h5py==3.15.1",
    "hydra-core==1.3.2",
    "ncsnv2",
    "numpy==1.26.4",
    "omegaconf==2.3.0",
    "score-sde-pytorch",
    "torch<=2.10.0",
]

sionna = [
    "hydra-core==1.3.2",
    "omegaconf==2.3.0",
    "sionna-no-rt==1.2.1",
    "tqdm==4.67.3",
]

[tool.uv]
conflicts = [
    [
      { group = "torch" },
      { group = "sionna" },
    ],
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu121", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
score-sde-pytorch = { git = "https://github.com/mariusarvinte/score_sde_pytorch", rev="68e7ea707fe1784e412b0d909850bd61b2a4fb75" }
ncsnv2 = { git = "https://github.com/mariusarvinte/ncsnv2", rev="63f8c166aada6fa14d13dfc208c37ee2ec4aa703" }

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[tool.ruff]
line-length = 96

[build-system]
requires = ["uv_build>=0.9.28,<0.10.0"]
build-backend = "uv_build"
